expected/main/core/bitdata/bitdata12.err
ERROR: "actual/main/core/bitdata/bitdata12.lc", line 1
bitdata Q1/2  = Ein[1] | Zwei[2] | Drei[3] | Vier[4]   -- out of range
                                                  ^
Literal 4 cannot be represented as a value of type Bit 2

ERROR: Aborting after previously reported error

